Fix link, not showing INDCs and style Not NDC (only Lybia)

--- a/app/javascript/app/components/country/country-ndc-overview/country-ndc-overview-styles.scss
+++ b/app/javascript/app/components/country/country-ndc-overview/country-ndc-overview-styles.scss
@@ -3,7 +3,7 @@
 .wrapper {
   border-bottom: solid 1px $gray2;
   border-top: solid 1px $gray2;
-  min-height: 450px;
+  min-height: 250px;
 }
 
 .embededWrapper {
@@ -149,7 +149,7 @@
 }
 
 .noContentWrapper {
-  min-height: 450px;
+  min-height: 150px;
 }
 
 .exploreBtn {
